--- a/plugin.xml
+++ b/plugin.xml
@@ -2,10 +2,10 @@
 <plugin xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="../../../engine/Shopware/Components/Plugin/schema/plugin.xsd">
 	<label>Comment for Order-Positions</label>
 	<label lang="de">Kommentare bei Bestellpositionen</label>
-	<version>2.2.13</version>
+	<version>5.4.19</version>
 	<copyright>Corporate Happiness GmbH</copyright>
 	<license>proprietary</license>
 	<link>https://www.corporate-happiness.de/</link>
-	<author>Corporate Happiness GmbH</author>
+	<author>Alexander Bachschmid</author>
 	<compatibility minVersion="5.5.1" />
 </plugin>
